--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* INDEX */
 body, html {
 	margin: 0;
 	padding: 0;
@@ -20,8 +21,53 @@ body, html {
 .dropdown-menu::-webkit-scrollbar {
 	width: 0;
 }
+/* INDEX */
+
+/*  */
+/*  */
+
+/* CONFIG GERAIS */
+/* body {
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background-color: #004AAD;
+}
 
 .divIframe {
+	position: relative;
+	width: 100%;
+	height: 0;
+	padding-top: 141.4286%;
+	padding-bottom: 0;
+	box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
+	margin-top: 1.6em;
+	margin-bottom: 0.9em;
+	overflow: hidden;
+	border-radius: 8px;
+	will-change: transform;
+} */
+
+.iframe {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	border: none;
+	padding: 0;
+	margin: 0;
+}
+
+
+/* CONFIG GERAIS */
+
+
+/* TESTE */
+/* .divIframe {
 	position: relative;
 	width: 100%;
 	height: 0;
@@ -44,4 +90,5 @@ body, html {
 	border: none;
 	padding: 0;
 	margin: 0;
-}
+} */
+/* TESTE */
