--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,27 @@ body, html {
 	background-position: center center;
 	background-color: #004AAD;
 }
+/* INDEX */
+
+/* CONFIG GERAIS */
+body::-webkit-scrollbar {
+    width: 0;
+}
+
+body::-webkit-scrollbar-horizontal {
+    height: 0;
+}
+
+.iframe {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	border: none;
+	padding: 0;
+	margin: 0;
+}
 
 .dropdown-menu {
 	max-height: 50vh;
@@ -21,74 +42,4 @@ body, html {
 .dropdown-menu::-webkit-scrollbar {
 	width: 0;
 }
-/* INDEX */
-
-/*  */
-/*  */
-
 /* CONFIG GERAIS */
-/* body {
-	margin: 0;
-	padding: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
-	background-color: #004AAD;
-}
-
-.divIframe {
-	position: relative;
-	width: 100%;
-	height: 0;
-	padding-top: 141.4286%;
-	padding-bottom: 0;
-	box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
-	margin-top: 1.6em;
-	margin-bottom: 0.9em;
-	overflow: hidden;
-	border-radius: 8px;
-	will-change: transform;
-} */
-
-.iframe {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	border: none;
-	padding: 0;
-	margin: 0;
-}
-
-
-/* CONFIG GERAIS */
-
-
-/* TESTE */
-/* .divIframe {
-	position: relative;
-	width: 100%;
-	height: 0;
-	padding-top: 141.4286%;
-	padding-bottom: 0;
-	box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
-	margin-top: 1.6em;
-	margin-bottom: 0.9em;
-	overflow: hidden;
-	border-radius: 8px;
-	will-change: transform;
-}
-
-.iframe {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	border: none;
-	padding: 0;
-	margin: 0;
-} */
-/* TESTE */
