mudando cor de fundo

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body, html {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center center;
-	background-color: #004AAD;
+	background-color: black;
 }
 /* INDEX */
 
